Nova versão do jogo, com alguns ajustes

--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <title>Click & Dodge</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>Jogo de Reflexo</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <h1>🎯 Click & Dodge</h1>
 
-    <div id="info">
-        <p>Pontos: <span id="pontuacao">0</span></p>
-        <p>Vidas: <span id="vidas">3</span></p>
-        <p id="fase"></p>
-    </div>
+<h1>🎯 Jogo de Reflexo</h1>
 
-    <div id="area-jogo"></div>
 
-    <p id="mensagem"></p>
+<div id="info">
+<span>Pontos: <strong id="pontos">0</strong></span>
+<span>Vidas: <strong id="vidas">3</strong></span>
+</div>
 
-    <button id="reiniciar" onclick="reiniciarJogo()">Reiniciar Jogo</button>
 
-    <script src="script.js"></script>
+<button id="start">Iniciar Jogo</button>
+
+
+<div id="area-jogo"></div>
+
+
+<script src="script.js"></script>
 </body>
 </html>
